.provarCaches/00D4P000000xR5ZUAU/objects/Flosum__Organisation__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DevHub</fullName>
                </value>
                <value>
                    <fullName>Scratch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__CreateSnapshot__c</fullName>
        <formula>HYPERLINK(&apos;/apex/&apos;+$Setup.Flosum__Credentials__c.Flosum__Namespace__c+&apos;CreateMultiMetaSnapshot?id=&apos;+ Id , &apos;Click to create new Snapshot&apos;,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Snapshot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flosum__HostName__c</fullName>
        <label>HostName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Last_Retrieval_Time__c</fullName>
        <label>Last Retrieval Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flosum__Lattest_Test_Execution_Result__c</fullName>
        <label>Latest Test Execution Result</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Flosum__Lifecycle_Stage__c</fullName>
        <label>Lifecycle Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Stage</fullName>
                </value>
                <value>
                    <fullName>Performance Test</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__Link__c</fullName>
        <formula>IF(Flosum__isExtensible__c, HYPERLINK(&apos;/apex/&apos;+$Setup.Flosum__Credentials__c.Flosum__Namespace__c+&apos;CreateGitSnapshot?oid=&apos;+ Id , IMAGE(&apos;/resource/icons/button3.png&apos;,&apos;Click to create new Snapshot&apos;,24,95)),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Repository</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Organisation_ID__c</fullName>
        <label>Organization ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Organisation_Type__c</fullName>
        <label>Organization Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Developer/Production</fullName>
                    <default>true</default>
                    <label>Developer/Production</label>
                </value>
                <value>
                    <fullName>Sandbox</fullName>
                </value>
                <value>
                    <fullName>Government cloud org</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__Overall_Code_Coverage__c</fullName>
        <label>Overall Code Coverage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Flosum__Owner_Name__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+ OwnerId , Owner:User.FirstName +&apos; &apos;+ Owner:User.LastName, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__User_Full_Name__c</fullName>
        <description>Full Name of User who authorize the environment</description>
        <label>User Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Username__c</fullName>
        <label>Username</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__isExtensible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isExtensible</label>
        <type>Checkbox</type>
    </fields>
    <label>Org</label>
    <listViews>
        <fullName>Flosum__All</fullName>
        <columns>NAME</columns>
        <columns>Flosum__Username__c</columns>
        <columns>Flosum__User_Full_Name__c</columns>
        <columns>Flosum__Organisation_Type__c</columns>
        <columns>Flosum__Owner_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Organization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orgs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>